# pybind11_json

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  dev-environment.yml  pixi.toml  pybind11_json.pc.in  pybind11_jsonConfig.cmake.in  pybind_jsonConfig.cmake.in
.github/workflows/: main.yml
include/pybind11_json/: pybind11_json.hpp
include/pybind_json/: pybind_json.hpp
test/: CMakeLists.txt  copyGTest.cmake.in  downloadGTest.cmake.in  pybind11_json_module.cpp  test_pybind11_json.cpp  test_pybind11_json.py  test_pybind_json.cpp
